@@ -54,10 +54,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -79,49 +80,37 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Slf4j
 @ExtendWith(MockitoExtension.class)
-public class UpdatePartyDetailsServiceTest {
+class UpdatePartyDetailsServiceTest {
 
-    public static final String BEARER_TOKEN = "Bearer token";
-    @Mock
-    NoticeOfChangePartiesService noticeOfChangePartiesService;
-
-    @Mock
-    ObjectMapper objectMapper;
-
-    @Mock
-    ConfidentialDetailsMapper confidentialDetailsMapper;
-
-    @Mock
-    C100RespondentSolicitorService c100RespondentSolicitorService;
-
-    @Mock
-    DocumentLanguageService documentLanguageService;
-
-    @Mock
-    DocumentGenService documentGenService;
-
-    @Mock
-    PartyLevelCaseFlagsService partyLevelCaseFlagsService;
-
-    @Mock
-    @Qualifier("caseSummaryTab")
-    CaseSummaryTabService caseSummaryTabService;
-
-    @Mock
-    ConfidentialityTabService confidentialityTabService;
-
-    @Mock
-    ConfidentialityC8RefugeService confidentialityC8RefugeService;
+    private static final String BEARER_TOKEN = "Bearer token";
 
     @InjectMocks
     UpdatePartyDetailsService updatePartyDetailsService;
-
+    @Mock
+    NoticeOfChangePartiesService noticeOfChangePartiesService;
+    @Mock
+    ObjectMapper objectMapper;
+    @Mock
+    ConfidentialDetailsMapper confidentialDetailsMapper;
+    @Mock
+    C100RespondentSolicitorService c100RespondentSolicitorService;
+    @Mock
+    DocumentLanguageService documentLanguageService;
+    @Mock
+    DocumentGenService documentGenService;
+    @Mock
+    PartyLevelCaseFlagsService partyLevelCaseFlagsService;
+    @Mock
+    @Qualifier("caseSummaryTab")
+    CaseSummaryTabService caseSummaryTabService;
+    @Mock
+    ConfidentialityTabService confidentialityTabService;
+    @Mock
+    ConfidentialityC8RefugeService confidentialityC8RefugeService;
     @Mock
     ManageOrderService manageOrderService;
-
     @Mock
     C8ArchiveService c8ArchiveService;
-
     @Mock
     CaseNameService caseNameService;
 
@@ -829,8 +818,6 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
-
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -888,12 +875,9 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
-
         updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
         assertEquals("test1 test22", caseDataUpdated.get("applicantName"));
         assertEquals("test1 test22", caseDataUpdated.get("respondentName"));
-
     }
 
     @Test
@@ -971,7 +955,6 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
-        Map<String, Object> nocMap = Map.of("some", "stuff");
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -998,7 +981,6 @@ public class UpdatePartyDetailsServiceTest {
         assertEquals("appl party", applicantsFL401.getPartyLevelFlag().getPartyName());
         assertEquals("resp party", respondentsFL401.getPartyLevelFlag().getPartyName());
     }
-
 
     @Test
     void testCaseFlagApplicantsC100() {
@@ -1108,10 +1090,8 @@ public class UpdatePartyDetailsServiceTest {
         assertNotNull(caseDataUpdated.get("applicants"));
     }
 
-
     @Test
     void testCaseFlagRespondentsC100() {
-
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1154,7 +1134,6 @@ public class UpdatePartyDetailsServiceTest {
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
 
-
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication(PrlAppsConstants.C100_CASE_TYPE)
             .respondents(respondentList)
@@ -1188,14 +1167,13 @@ public class UpdatePartyDetailsServiceTest {
                              .build())
             .caseDetailsBefore(CaseDetails.builder().id(123L).data(stringObjectMap).build())
             .build();
-        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
-        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
-        assertNotNull("respondents");
+        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
+            callbackRequest, BEARER_TOKEN);
+        assertNotNull(updatedCaseData.get("respondents"));
     }
 
     @Test
-    void testC8GenerateForRespondentsC100() throws Exception {
-
+    void testC8GenerateForRespondentsC100() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1270,13 +1248,13 @@ public class UpdatePartyDetailsServiceTest {
                              .data(stringObjectMap)
                              .build())
             .build();
-        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
-        assertNotNull("respondents");
+        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
+            callbackRequest, BEARER_TOKEN);
+        assertNotNull(updatedCaseData.get("respondents"));
     }
 
     @Test
     void testC8GenerateForSixRespondentsC100() throws Exception {
-
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1470,10 +1448,10 @@ public class UpdatePartyDetailsServiceTest {
             .build();
         DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
         when(documentLanguageService.docGenerateLang(Mockito.any(CaseData.class))).thenReturn(documentLanguage);
-        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
-        assertNotNull("respondents");
+        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
+            callbackRequest, BEARER_TOKEN);
+        assertNotNull(updatedCaseData.get("respondents"));
     }
-
 
     @Test
     void testCheckIfConfidentialityDetailsChangedRespondentWhenRespondentsDoNotExist() {
@@ -1497,7 +1475,7 @@ public class UpdatePartyDetailsServiceTest {
         );
 
         // then
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1540,15 +1518,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .address(Address.builder()
@@ -1561,7 +1530,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1573,15 +1542,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .build();
@@ -1590,7 +1550,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1604,15 +1564,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1623,7 +1574,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1635,15 +1586,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .phoneNumber("012345")
             .build();
@@ -1652,7 +1594,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1663,15 +1605,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .build();
         Element<PartyDetails> wrappedRespondent = Element.<PartyDetails>builder().value(respondent).build();
@@ -1679,7 +1612,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1699,15 +1632,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .address(Address.builder()
@@ -1720,7 +1644,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1736,15 +1660,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .build();
@@ -1753,7 +1668,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1771,15 +1686,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1790,7 +1696,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1806,15 +1712,6 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .phoneNumber("012345")
             .build();
@@ -1823,7 +1720,7 @@ public class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertEquals(true, bool);
+        assertTrue(bool);
     }
 
     @Test
@@ -1839,20 +1736,11 @@ public class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
-        Map<String, Object> objectMap = new HashMap<>();
-        CallbackRequest callbackRequest = CallbackRequest.builder()
-            .caseDetailsBefore(CaseDetails
-                                   .builder()
-                                   .state(State.CASE_ISSUED.getValue())
-                                   .data(objectMap)
-                                   .build())
-            .build();
-        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         boolean bool = updatePartyDetailsService.checkIfConfidentialityDetailsChangedRespondent(
             caseDataBefore,
             wrappedRespondentBefore
         );
-        assertEquals(false, bool);
+        assertFalse(bool);
     }
 
     @Test
@@ -1880,10 +1768,8 @@ public class UpdatePartyDetailsServiceTest {
         assertNotNull(updatedCaseData);
     }
 
-
     @Test
     void testAmendOtherPeopleInTheCase() {
-        CaseData caseData = CaseData.builder().build();
         Map<String, Object> objectMap = new HashMap<>();
         objectMap.put("caseTypeOfApplication", "C100");
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(CaseDetails.builder()
@@ -1955,8 +1841,6 @@ public class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetApplicantDefaultApplicant() {
-
-
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -1986,7 +1870,6 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyApplicantForC100(caseData);
         assertNotNull(updatedCaseData.get("applicants"));
     }
-
 
     @Test
     void testSetApplicantDefaultApplicant_scenario2() {
@@ -2022,8 +1905,6 @@ public class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetRespondentsDefaultApplicant() {
-
-
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -2134,7 +2015,7 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyChildDetails(caseData);
         List<Element<Child>> updatedChildDetails = (List<Element<Child>>) updatedCaseData.get("children");
         assertEquals(1, updatedChildDetails.size());
-        assertEquals(Child.builder().build(), updatedChildDetails.get(0).getValue());
+        assertEquals(Child.builder().build(), updatedChildDetails.getFirst().getValue());
     }
 
     @Test
@@ -2221,7 +2102,6 @@ public class UpdatePartyDetailsServiceTest {
             "newChildDetails");
         assertEquals(1, updatedChildDetails.size());
     }
-
 
     @Test
     void testUpdateOtherPeopleInTheCaseConfidentialityData() {
@@ -2310,7 +2190,6 @@ public class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.updateOtherPeopleInTheCaseConfidentialityData(
             callbackRequest);
         assertNotNull(updatedCaseData);
-
     }
 
     @Test
@@ -2535,7 +2414,6 @@ public class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
-
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2566,7 +2444,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     @Test
@@ -2588,7 +2465,6 @@ public class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
-
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2619,7 +2495,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     @Test
@@ -2671,9 +2546,7 @@ public class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2765,9 +2638,7 @@ public class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2817,12 +2688,9 @@ public class UpdatePartyDetailsServiceTest {
                 return null;
             });
 
-
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
-        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
-
     }
 
     @Test
@@ -2854,7 +2722,6 @@ public class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
-
     }
 
     private Element<PartyDetails> getPartyDetails(String partyName, boolean hasBarrister) {
@@ -2870,5 +2737,4 @@ public class UpdatePartyDetailsServiceTest {
                        .firstName(partyName).build())
             .build();
     }
-
 }
